코딩배우기

--- a/HTML1.html
+++ b/HTML1.html
@@ -341,8 +341,22 @@ src가 바로 속성이다. 속성의 값인 주소는 이미지의 주소이다
     웹호스팅으로 쉽게 목표를 달성해보고 웹서버를 직접 설치하는 방법으로 공부하는 것을 추천한다. 
     만약 웹서버가 어렵거나 시간이 없다면 웹호스팅만 공부해보자.
 </p>
+<h2>
+    웹호스팅 실습해보기
+</h2>
+<p>
+    <br>웹서버를 직접 운영하기 위해선 우선 컴퓨터가 있어야 하고 컴퓨터가 냉장고처럼 항상 켜져 있어야 한다. 
+    <br>그리고 웹서버라는 프로그랩을 배워서 설치하고 인터넷을 통해서 외부로 정보를 전송할 수 있또록 설정해야 한다. 
+    <br>쉽지 않은 과정일 것이다. 
+    <br style="margin-top: 45%;"> <img src="04.png" width="50% " alt="">
+    <br style="margin-top: 45%;">
+    그래서 이런일을 대행해주는 회사들이 있다. 
+    인터넷에 연결된 컴퓨터 하나 하나를 호스트라고 한다. 이런 컴퓨터를 빌려주는 사업을 호스팅이라고 말한다. 
+    웹서버를 전문적으로 빌려주는 비즈니스를 웹호스팅 업체라고 말하는 것이다. 
+    수많은 웹 호스팅 업체가 있는데 무료, 유명한 서비스를 찾아보자. 
+    
 
-
+</p>
 
 
 
