--- a/HTML1.html
+++ b/HTML1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="CODING.html">WEB</a></h1>
+        <h1><a href="index.html">WEB</a></h1>
         <ol>
             <li>HTML</li>
             <li>CSS</li>
@@ -350,15 +350,40 @@ src가 바로 속성이다. 속성의 값인 주소는 이미지의 주소이다
     <br>쉽지 않은 과정일 것이다. 
     <br style="margin-top: 45%;"> <img src="04.png" width="50% " alt="">
     <br style="margin-top: 45%;">
-    그래서 이런일을 대행해주는 회사들이 있다. 
-    인터넷에 연결된 컴퓨터 하나 하나를 호스트라고 한다. 이런 컴퓨터를 빌려주는 사업을 호스팅이라고 말한다. 
-    웹서버를 전문적으로 빌려주는 비즈니스를 웹호스팅 업체라고 말하는 것이다. 
-    수많은 웹 호스팅 업체가 있는데 무료, 유명한 서비스를 찾아보자. 
-    
-
+    <br>그래서 이런일을 대행해주는 회사들이 있다. 
+    <br>인터넷에 연결된 컴퓨터 하나 하나를 호스트라고 한다. 이런 컴퓨터를 빌려주는 사업을 호스팅이라고 말한다. 
+    <br>웹서버를 전문적으로 빌려주는 비즈니스를 웹호스팅 업체라고 말하는 것이다. 
+    <br>수많은 웹 호스팅 업체가 있는데 무료, 유명한 서비스를 찾아보자. 
+    </p>
+<h2>
+    깃허브(github)로 홈페이지 만들기
+</h2>
+<a href=" github(https://github.com)">
+    깃허브 홈페이지 들어가기
+</a>
+<img src="12.png" width="50%" alt="">
+<p>
+    다음과 같은 화면이 나올 것이다. 우리는 깃허브가 제공하는 여러 기능 중 웹호스팅 기능을 이용해서
+    우리의 홈페이지를 운영할 것이다. 
 </p>
-
-
+<img src="13.png" width="50%">
+<p>
+    우측상단의 sign up 을 눌러서 회원가입을 하고 로그인을 해준다. 
+    그다음 저장소(repository)라는 것을 생성해야 한다. 
+    저장소는 소스코드를 보관하는 곳이라고 생각하면 된다.
+</p>
+<img src="14.png" width="50%">
+<p>
+    로그인 하게 되면 creat Repository 라는 버튼이 보일 것이다.
+    그것을 누르거나 우측 상단 + 버튼을 눌러서 new repository를 눌러준다. 
+</p>
+<img src="05.png" width50%="">
+<p>
+    repository name에는 프로젝트의 이름을 적어준다(예:WEB-1)
+    public(공개), private(비공개)는 저장소의 공개여부를 정하는 것이다. 
+    공개로 해줘야 다른 사람들이 우리의 소스코드를 볼 수 있다.
+    공개로 설정 후 create repository 버튼을 눌러준다.
+</p>
 
 
 
