--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="utr-8">
 </head>
 <body>
-    <h1><a href="CODING.html">WEB</a></h1>
+    <h1><a href="index.html">WEB</a></h1>
     <ol>
         <li><a href="HTML1.html"target="_blank">HTML</a></li>
         <li><a href="">CSS</a></li>
