--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
 <head>
-<title>코딩배우기</title>
+<title>coding-learning</title>
 <meta charset="utr-8">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-        <li><a href="HTML1.html"target="_blank">HTML</a></li>
-        <li><a href="">CSS</a></li>
-        <li><a href="">Java Script</a></li>  
+        <li><h2><a href="HTML1.html">HTML</a></h2></li>
+        <li><h2><a href="">CSS</a></h2></li>
+        <li><h2><a href="">Java Script</a></h2></li>  
     </ol>
 </body>
 </html>
