--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>coding-learning</title>
-<meta charset="utr-8">
+<meta charset="utf-8">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
