--- a/웹사이트만들기.html
+++ b/웹사이트만들기.html
@@ -10,6 +10,12 @@
         <li><h2><a href="HTML1.html">HTML</h2></li>
         </ol>    
         <ol>
+            <li><a href="HTML기초알기.html">HTML기초 배우기</a></li>
+            <li><a href="줄바꿈과 단락조절.html">줄바꿈 태그와 단락조절</a></li>
+            <li><a href="HTML이 중요한 이유.html">HTML이 중요한 이유</a></li>
+            <li><a href="부모자식태그와 목차태그.html">부모자식태그와 목차태그</a></li>
+            <li><a href="문서의 구조와 자주쓰는 태그.html">문서의 구조와 자주쓰는 태그들</a></li>
+            <li><a href="태그로 링크걸기.html">태그로 링크걸기</a></li>
             <li><a href="웹사이트만들기.html">웹사이트 만들기</a></li>
             <li><a href="인터넷의 기본원리.html">인터넷의 기본원리</a></li>
             <li><a href="웹호스팅 실습.html">웹호스팅 실습</a></li>
